fixed issue #119: added white-space: pre-wrap;

--- a/src/app/pages/memory-detail/memory-detail.component.scss
+++ b/src/app/pages/memory-detail/memory-detail.component.scss
@@ -79,7 +79,9 @@ h1{
   .custom-pre {
     font-family: monospace;
     font-size: large;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+    white-space: pre-wrap;
+    line-height: 1.13rem;
   }
 }
 
